--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -2,7 +2,14 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
+
+body {
+    display: flex; 
+    flex-direction: column;
+}
+
 
 header{
     display: flex;
@@ -12,7 +19,57 @@ header{
 
 h1{
     color: rgb(38, 60, 179);
-    font-family: 'Courier New', Courier, monospace;
+    
 }
 
+main{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    width: 400px; 
+    padding: 20px; 
+    background-color: #ffffff; 
+    border: 2px solid #ccc; 
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    flex-direction: column; 
+}
+
+input {
+    margin-bottom: 15px; 
+    padding: 10px; 
+    width: 100%; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+}
+
+button {
+    padding: 10px 15px; 
+    background-color: #007bff; 
+    color: white; 
+    border: none; 
+    border-radius: 5px; 
+    cursor: pointer; 
+}
+
+button:hover {
+    background-color: #0056b3; 
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    
+   background-color: #007bff; 
+    color: white; 
+    text-align: center; 
+    padding: 10px 0; /
+}
 
