Feat: The responsive was created

--- a/src/CSS/styles.css
+++ b/src/CSS/styles.css
@@ -98,3 +98,44 @@ footer {
 footer:hover{
     color: white;
 }
+
+/*Styles for tablets*/
+@media (max-width: 768px) {
+
+    .container {
+        width: 90%; 
+        padding: 15px; 
+        
+    }
+
+    input {
+        padding: 8px; 
+    }
+
+    button {
+        padding: 8px 10px; 
+    }
+}
+
+/* Styles for mobile */
+@media (max-width: 480px) {
+    h1{
+        text-align: center;
+    }
+
+    .container {
+        width: 95%; 
+        padding: 10px; 
+    }
+
+    input {
+        padding: 6px; 
+        font-size: 14px; 
+    }
+
+    button {
+        padding: 6px 8px; 
+        font-size: 14px; 
+    }
+}
+
